--- a/style.scss
+++ b/style.scss
@@ -31,17 +31,20 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  align-items: stretch;   /* stretch instead of center */
+  align-items: stretch;
+  /* stretch instead of center */
   gap: 15%;
   width: 100%;
 }
 
 section.view1,
-section.view2,section.view3 {
+section.view2,
+section.view3 ,section.view4{
   width: 100%;
   max-width: 1600px;
   margin: 0 auto;
-  overflow: hidden;       /* prevent overflow */
+  overflow: hidden;
+  /* prevent overflow */
 }
 
 section.view1 {
@@ -52,7 +55,8 @@ section.view1 {
   padding: 1rem;
 
   img {
-    max-width: 100%;      /* prevent image overflow */
+    max-width: 100%;
+    /* prevent image overflow */
     height: auto;
     display: block;
     border-radius: 5%;
@@ -156,13 +160,111 @@ section.view2 {
     }
   }
 }
-section.view3{
+
+section.view3 {
   padding: 1rem;
-  .top img{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .top img {
     width: 100%;
     display: block;
+    border-radius: 5%;
+  }
+
+  .bottom {
+    padding: 1rem;
+    background-color: #212020;
+    border-radius: 5%;
+  }
+
+  p {
+    padding: 1rem;
+    line-height: 2rem;
+    opacity: 0.5;
+    font-weight: 100;
+    font-size: 1.5rem;
+  }
+
+  h1 {
+    font-weight: 350;
+    font-size: xxx-large;
+    opacity: 0.9;
+  }
+
+  .text {
+    padding: 1rem;
+  }
+
+  #uppercase {
+    text-transform: uppercase;
+  }
+
+  .paragraph {
+    padding: 1rem 0;
+  }
+
+  .flex {
+    display: flex;
   }
 }
+
+section.view4 {
+  display: flex;
+  flex-direction: column;
+  color: aliceblue;
+  gap: 1rem;
+  padding: 1rem;
+
+  img {
+    max-width: 100%;
+    /* prevent image overflow */
+    height: auto;
+    display: block;
+    border-radius: 5%;
+  }
+
+  .bottom {
+    padding: 1rem;
+    background-color: #212020;
+    border-radius: 5%;
+  }
+
+  #studio {
+    letter-spacing: 0.2rem;
+    color: white;
+    font-weight: 500;
+    font-size: 1rem;
+  }
+
+  p {
+    padding: 1rem;
+    line-height: 2rem;
+    opacity: 0.5;
+    font-weight: 100;
+    font-size: 1.5rem;
+  }
+
+  h1 {
+    font-weight: 350;
+    font-size: xxx-large;
+    opacity: 0.9;
+  }
+
+  .text {
+    padding: 1rem;
+  }
+
+  #uppercase {
+    text-transform: uppercase;
+  }
+
+  .paragraph {
+    padding: 1rem 0;
+  }
+}
+
 
 @media (min-width: 900px) {
   main {
@@ -214,5 +316,44 @@ section.view3{
         }
       }
     }
+
+    section.view3 {
+      flex-direction: row;
+      gap: 2rem; /* optional spacing between halves */
+
+      .top,
+      .bottom {
+        width: 50%; /* equal divide */
+      }
+      .top{
+        order: 2;
+      }
+      .bottom {
+        order: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; /* text ko center align karne ke liye */
+      }
+    }
+     section.view4 {
+      flex-direction: row;
+      gap: 2rem; /* optional spacing between halves */
+
+      .top,
+      .bottom {
+        width: 50%; /* equal divide */
+      }
+      .top{
+        order: 1;
+      }
+      .bottom {
+        order: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; /* text ko center align karne ke liye */
+      }
+    }
   }
 }
+
+
