--- a/style.css
+++ b/style.css
@@ -66,10 +66,10 @@ section.view1 .bottom {
   background-color: #212020;
   border-radius: 5%;
 }
-section.view1 #studio {
+section.view1 .bottom #studio {
   letter-spacing: 0.2rem;
   color: white;
-  font-weight: 500;
+  font-weight: 100;
   font-size: 1rem;
 }
 section.view1 p {
@@ -77,7 +77,7 @@ section.view1 p {
   line-height: 2rem;
   opacity: 0.5;
   font-weight: 100;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 section.view1 h1 {
   font-weight: 350;
@@ -164,17 +164,30 @@ section.view3 .bottom {
   background-color: #212020;
   border-radius: 5%;
 }
-section.view3 p {
+section.view3 .bottom #our {
   padding: 1rem;
-  line-height: 2rem;
+  letter-spacing: 0.2rem;
+  color: white;
+  font-weight: 500;
+  font-size: 1rem;
+  margin: 0 0 10rem 0;
   opacity: 0.5;
-  font-weight: 100;
-  font-size: 1.5rem;
+}
+section.view3 .bottom .bottom > p {
+  padding: 1rem;
+}
+section.view3 .bottom .Para p {
+  display: inline;
+  margin: 0;
+  opacity: 0.7;
+  font-weight: 300;
+  font-size: 1rem;
 }
 section.view3 h1 {
   font-weight: 350;
   font-size: xxx-large;
   opacity: 0.9;
+  margin-bottom: 1rem;
 }
 section.view3 .text {
   padding: 1rem;
@@ -208,31 +221,42 @@ section.view4 .bottom {
   background-color: #212020;
   border-radius: 5%;
 }
-section.view4 #studio {
+section.view4 .bottom #our {
+  padding: 1rem;
   letter-spacing: 0.2rem;
   color: white;
   font-weight: 500;
   font-size: 1rem;
+  margin: 0 0 10rem 0;
+  opacity: 0.5;
 }
-section.view4 p {
+section.view4 .bottom .bottom > p {
   padding: 1rem;
   line-height: 2rem;
   opacity: 0.5;
   font-weight: 100;
   font-size: 1.5rem;
 }
-section.view4 h1 {
+section.view4 .bottom .Para p {
+  display: inline;
+  margin: 0;
+  opacity: 0.7;
+  font-weight: 300;
+  font-size: 1rem;
+}
+section.view4 .bottom h1 {
   font-weight: 350;
   font-size: xxx-large;
   opacity: 0.9;
+  margin-bottom: 1rem;
 }
-section.view4 .text {
+section.view4 .bottom .text {
   padding: 1rem;
 }
-section.view4 #uppercase {
+section.view4 .bottom #uppercase {
   text-transform: uppercase;
 }
-section.view4 .paragraph {
+section.view4 .bottom .paragraph {
   padding: 1rem 0;
 }
 
@@ -248,6 +272,7 @@ section.view4 .paragraph {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 3rem;
   }
   main section.view1 .bottom .text {
@@ -293,10 +318,15 @@ section.view4 .paragraph {
     order: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* text ko center align karne ke liye */
+    justify-content: space-around; /* text ko center align karne ke liye */
+  }
+  main section.view3 .bottom .Para {
+    display: flex;
+    gap: 1rem;
   }
   main section.view4 {
     flex-direction: row;
+    justify-content: space-between;
     gap: 2rem; /* optional spacing between halves */
   }
   main section.view4 .top,
@@ -310,6 +340,10 @@ section.view4 .paragraph {
     order: 2;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* text ko center align karne ke liye */
+    justify-content: space-around; /* text ko center align karne ke liye */
+  }
+  main section.view4 .bottom .Para {
+    display: flex;
+    gap: 1rem;
   }
 }/*# sourceMappingURL=style.css.map */
