--- a/style.scss
+++ b/style.scss
@@ -66,21 +66,21 @@ section.view1 {
     padding: 1rem;
     background-color: #212020;
     border-radius: 5%;
-  }
-
-  #studio {
+     #studio {
     letter-spacing: 0.2rem;
     color: white;
-    font-weight: 500;
+    font-weight: 100;
     font-size: 1rem;
   }
+  }
+
 
   p {
     padding: 1rem;
     line-height: 2rem;
-    opacity: 0.5;
+    opacity:0.5;
     font-weight: 100;
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   h1 {
@@ -177,20 +177,33 @@ section.view3 {
     padding: 1rem;
     background-color: #212020;
     border-radius: 5%;
+    #our{
+      padding: 1rem;
+      letter-spacing: 0.2rem;
+    color: white;
+    font-weight: 500;
+    font-size: 1rem;
+        margin: 0 0 10rem 0;
+        opacity: 0.5;
+    }
+ .bottom>p{
+  padding: 1rem;
+ }
+  .Para p{
+display: inline;
+margin: 0;
+  opacity: 0.7;
+    font-weight: 300;
+    font-size: 1rem;
   }
-
-  p {
-    padding: 1rem;
-    line-height: 2rem;
-    opacity: 0.5;
-    font-weight: 100;
-    font-size: 1.5rem;
-  }
+}
+ 
 
   h1 {
     font-weight: 350;
     font-size: xxx-large;
     opacity: 0.9;
+        margin-bottom: 1rem;
   }
 
   .text {
@@ -229,27 +242,37 @@ section.view4 {
     padding: 1rem;
     background-color: #212020;
     border-radius: 5%;
-  }
-
-  #studio {
+  
+  #our {
+       padding: 1rem;
     letter-spacing: 0.2rem;
     color: white;
     font-weight: 500;
     font-size: 1rem;
+    margin: 0 0 10rem 0;
+    opacity: 0.5;
   }
 
-  p {
+  .bottom>p {
     padding: 1rem;
     line-height: 2rem;
     opacity: 0.5;
     font-weight: 100;
     font-size: 1.5rem;
   }
+  .Para p{
+display: inline;
+margin: 0;
+  opacity: 0.7;
+    font-weight: 300;
+    font-size: 1rem;
+  }
 
   h1 {
     font-weight: 350;
     font-size: xxx-large;
     opacity: 0.9;
+        margin-bottom: 1rem;
   }
 
   .text {
@@ -264,13 +287,16 @@ section.view4 {
     padding: 1rem 0;
   }
 }
+}
 
 
+
+//destop view
 @media (min-width: 900px) {
   main {
     section.view1 {
       flex-direction: row;
-
+      
       .top,
       .bottom {
         width: 50%;
@@ -280,6 +306,7 @@ section.view4 {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        flex-wrap: wrap;
         padding: 3rem;
 
         .text {
@@ -332,11 +359,17 @@ section.view4 {
         order: 1;
         display: flex;
         flex-direction: column;
-        justify-content: center; /* text ko center align karne ke liye */
+        justify-content: space-around; /* text ko center align karne ke liye */
+        .Para{
+          display: flex;
+          gap: 1rem;
+        }
       }
+    
     }
      section.view4 {
       flex-direction: row;
+      justify-content: space-between;
       gap: 2rem; /* optional spacing between halves */
 
       .top,
@@ -350,7 +383,12 @@ section.view4 {
         order: 2;
         display: flex;
         flex-direction: column;
-        justify-content: center; /* text ko center align karne ke liye */
+        justify-content: space-around; /* text ko center align karne ke liye */
+        .Para{
+          display: flex;
+         
+          gap: 1rem;
+        }
       }
     }
   }
