--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ main {
 
 section.view1,
 section.view2,
-section.view3, section.view4 {
+section.view3, section.view4, section.view5, section.view6, section.view7, section.view8 {
   width: 100%;
   max-width: 1600px;
   margin: 0 auto;
@@ -238,7 +238,6 @@ section.view4 .bottom .bottom > p {
   font-size: 1.5rem;
 }
 section.view4 .bottom .Para p {
-  display: inline;
   margin: 0;
   opacity: 0.7;
   font-weight: 300;
@@ -258,6 +257,29 @@ section.view4 .bottom #uppercase {
 }
 section.view4 .bottom .paragraph {
   padding: 1rem 0;
+}
+
+section.view5 h1 {
+  padding: 1rem;
+  margin-left: 1rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  font-weight: 350;
+}
+
+section.view6 {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
+  padding: 1rem;
+}
+section.view6 .card {
+  width: 100%;
+  background-image: url("https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd7d003dfb6a1bdecb_team-01.webp");
+  background-size: cover;
+  border-radius: 5%;
+  aspect-ratio: 1/1;
 }
 
 @media (min-width: 900px) {
@@ -305,7 +327,7 @@ section.view4 .bottom .paragraph {
   }
   main section.view3 {
     flex-direction: row;
-    gap: 2rem; /* optional spacing between halves */
+    gap: 1rem; /* optional spacing between halves */
   }
   main section.view3 .top,
   main section.view3 .bottom {
@@ -327,7 +349,7 @@ section.view4 .bottom .paragraph {
   main section.view4 {
     flex-direction: row;
     justify-content: space-between;
-    gap: 2rem; /* optional spacing between halves */
+    gap: 1rem; /* optional spacing between halves */
   }
   main section.view4 .top,
   main section.view4 .bottom {
