Final frontend Commit

--- a/style.css
+++ b/style.css
@@ -36,71 +36,74 @@ main {
   gap: 15%;
   width: 100%;
 }
-
-section.view1,
-section.view2,
-section.view3, section.view4, section.view5, section.view6, section.view7, section.view8 {
+main section.view1,
+main section.view2,
+main section.view3,
+main section.view4,
+main section.view5,
+main section.view6,
+main section.view7,
+main section.view8 {
   width: 100%;
   max-width: 1600px;
   margin: 0 auto;
   overflow: hidden;
   /* prevent overflow */
 }
-
-section.view1 {
+main section.view1 {
   display: flex;
   flex-direction: column;
   color: aliceblue;
   gap: 1rem;
   padding: 1rem;
 }
-section.view1 img {
+main section.view1 img {
   max-width: 100%;
   /* prevent image overflow */
   height: auto;
   display: block;
   border-radius: 5%;
 }
-section.view1 .bottom {
+main section.view1 .bottom {
   padding: 1rem;
   background-color: #212020;
   border-radius: 5%;
 }
-section.view1 .bottom #studio {
+main section.view1 .bottom #studio {
   letter-spacing: 0.2rem;
   color: white;
   font-weight: 100;
   font-size: 1rem;
 }
-section.view1 p {
+main section.view1 p {
   padding: 1rem;
   line-height: 2rem;
   opacity: 0.5;
   font-weight: 100;
   font-size: 1rem;
 }
-section.view1 h1 {
+main section.view1 h1 {
   font-weight: 350;
   font-size: xxx-large;
   opacity: 0.9;
 }
-section.view1 .text {
+main section.view1 .text {
   padding: 1rem;
 }
-section.view1 #uppercase {
+main section.view1 #uppercase {
   text-transform: uppercase;
 }
-section.view1 .paragraph {
+main section.view1 .paragraph {
   padding: 1rem 0;
 }
-section.view1 .flex {
+main section.view1 .flex {
   display: flex;
 }
-section.view1 button {
+main section.view1 button {
   color: #212020;
   background-color: #212020;
 }
-section.view1 #arrow {
+main section.view1 #arrow {
   border: 1px solid rgb(84, 84, 84);
   margin-right: 0.3rem;
   border-radius: 50%;
@@ -111,60 +114,58 @@ section.view1 #arrow {
   justify-content: center;
   cursor: pointer;
 }
-section.view1 #ourstory {
+main section.view1 #ourstory {
   padding-left: 0.3rem;
   font-weight: 300;
   font-size: 1rem;
   letter-spacing: 0.1rem;
   cursor: pointer;
 }
-
-section.view2 {
+main section.view2 {
   display: flex;
   padding: 1rem;
   justify-content: space-around;
 }
-section.view2 .top,
-section.view2 .bottom {
+main section.view2 .top,
+main section.view2 .bottom {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-section.view2 .top .element,
-section.view2 .bottom .element {
+main section.view2 .top .element,
+main section.view2 .bottom .element {
   display: flex;
   flex-direction: column;
   text-align: center;
   padding: 1rem;
 }
-section.view2 .top .element h2,
-section.view2 .bottom .element h2 {
+main section.view2 .top .element h2,
+main section.view2 .bottom .element h2 {
   font-size: 3rem;
   font-weight: 300;
 }
-section.view2 .top .element small,
-section.view2 .bottom .element small {
+main section.view2 .top .element small,
+main section.view2 .bottom .element small {
   font-size: 1rem;
   opacity: 0.5;
 }
-
-section.view3 {
+main section.view3 {
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-section.view3 .top img {
+main section.view3 .top img {
   width: 100%;
   display: block;
   border-radius: 5%;
 }
-section.view3 .bottom {
+main section.view3 .bottom {
   padding: 1rem;
   background-color: #212020;
   border-radius: 5%;
 }
-section.view3 .bottom #our {
+main section.view3 .bottom #our {
   padding: 1rem;
   letter-spacing: 0.2rem;
   color: white;
@@ -173,55 +174,54 @@ section.view3 .bottom #our {
   margin: 0 0 8rem 0;
   opacity: 0.5;
 }
-section.view3 .bottom .bottom > p {
+main section.view3 .bottom .bottom > p {
   padding: 1rem;
 }
-section.view3 .bottom .Para p {
+main section.view3 .bottom .Para p {
   display: inline;
   margin: 0;
   opacity: 0.7;
   font-weight: 300;
   font-size: 1rem;
 }
-section.view3 h1 {
+main section.view3 h1 {
   font-weight: 350;
   font-size: xxx-large;
   opacity: 0.9;
   margin-bottom: 1rem;
 }
-section.view3 .text {
+main section.view3 .text {
   padding: 1rem;
 }
-section.view3 #uppercase {
+main section.view3 #uppercase {
   text-transform: uppercase;
 }
-section.view3 .paragraph {
+main section.view3 .paragraph {
   padding: 1rem 0;
 }
-section.view3 .flex {
+main section.view3 .flex {
   display: flex;
 }
-
-section.view4 {
+main section.view4 {
   display: flex;
   flex-direction: column;
   color: aliceblue;
   gap: 1rem;
   padding: 1rem;
 }
-section.view4 img {
+main section.view4 img {
   max-width: 100%;
   /* prevent image overflow */
   height: auto;
   display: block;
   border-radius: 5%;
 }
-section.view4 .bottom {
+main section.view4 .bottom {
   padding: 1rem;
   background-color: #212020;
   border-radius: 5%;
 }
-section.view4 .bottom #our {
+main section.view4 .bottom #our {
   padding: 1rem;
   letter-spacing: 0.2rem;
   color: white;
@@ -230,36 +230,35 @@ section.view4 .bottom #our {
   margin: 0 0 8rem 0;
   opacity: 0.5;
 }
-section.view4 .bottom .bottom > p {
+main section.view4 .bottom .bottom > p {
   padding: 1rem;
   line-height: 2rem;
   opacity: 0.5;
   font-weight: 100;
   font-size: 1.5rem;
 }
-section.view4 .bottom .Para p {
+main section.view4 .bottom .Para p {
   margin: 0;
   opacity: 0.7;
   font-weight: 300;
   font-size: 1rem;
 }
-section.view4 .bottom h1 {
+main section.view4 .bottom h1 {
   font-weight: 350;
   font-size: xxx-large;
   opacity: 0.9;
   margin-bottom: 1rem;
 }
-section.view4 .bottom .text {
+main section.view4 .bottom .text {
   padding: 1rem;
 }
-section.view4 .bottom #uppercase {
+main section.view4 .bottom #uppercase {
   text-transform: uppercase;
 }
-section.view4 .bottom .paragraph {
+main section.view4 .bottom .paragraph {
   padding: 1rem 0;
 }
-
-section.view5 h1 {
+main section.view5 h1 {
   padding: 1rem;
   margin-left: 1rem;
   text-transform: uppercase;
@@ -267,19 +266,78 @@ section.view5 h1 {
   letter-spacing: 0.2rem;
   font-weight: 350;
 }
-
-section.view6 {
+main section.view6 {
   display: flex;
+  flex-direction: column;
   gap: 2rem;
   width: 100%;
   padding: 1rem;
 }
-section.view6 .card {
+main section.view6 .card1,
+main section.view6 .card2,
+main section.view6 .card3 {
   width: 100%;
-  background-image: url("https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd7d003dfb6a1bdecb_team-01.webp");
-  background-size: cover;
   border-radius: 5%;
   aspect-ratio: 1/1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1rem;
+}
+main section.view6 .card1 .icon,
+main section.view6 .card1 .bottom,
+main section.view6 .card2 .icon,
+main section.view6 .card2 .bottom,
+main section.view6 .card3 .icon,
+main section.view6 .card3 .bottom {
+  background-color: rgba(187, 187, 187, 0.375);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  border: 1px solid white;
+  border-radius: 0.7rem;
+  padding: 0.5rem;
+}
+main section.view6 .card1 .top,
+main section.view6 .card2 .top,
+main section.view6 .card3 .top {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+main section.view6 .card1 .icon,
+main section.view6 .card2 .icon,
+main section.view6 .card3 .icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(187, 187, 187, 0.375);
+}
+main section.view6 .card1 .bottom,
+main section.view6 .card2 .bottom,
+main section.view6 .card3 .bottom {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem 1rem;
+}
+main section.view6 .card1 .bottom p,
+main section.view6 .card2 .bottom p,
+main section.view6 .card3 .bottom p {
+  text-transform: uppercase;
+}
+main section.view6 .card1 {
+  background-image: url("https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd7d003dfb6a1bdecb_team-01.webp");
+  background-size: cover;
+}
+main section.view6 .card2 {
+  background-image: url("https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd2e12fa747e999689_team-02.webp");
+  background-size: cover;
+}
+main section.view6 .card3 {
+  background-image: url("https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbdc1f945f817bf4fd7_team-03.webp");
+  background-size: cover;
 }
 
 @media (min-width: 900px) {
@@ -327,11 +385,13 @@ section.view6 .card {
   }
   main section.view3 {
     flex-direction: row;
-    gap: 1rem; /* optional spacing between halves */
+    gap: 1rem;
+    /* optional spacing between halves */
   }
   main section.view3 .top,
   main section.view3 .bottom {
-    width: 50%; /* equal divide */
+    width: 50%;
+    /* equal divide */
   }
   main section.view3 .top {
     order: 2;
@@ -340,7 +400,8 @@ section.view6 .card {
     order: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-around; /* text ko center align karne ke liye */
+    justify-content: space-around;
+    /* text ko center align karne ke liye */
   }
   main section.view3 .bottom .Para {
     display: flex;
@@ -349,11 +410,13 @@ section.view6 .card {
   main section.view4 {
     flex-direction: row;
     justify-content: space-between;
-    gap: 1rem; /* optional spacing between halves */
+    gap: 1rem;
+    /* optional spacing between halves */
   }
   main section.view4 .top,
   main section.view4 .bottom {
-    width: 50%; /* equal divide */
+    width: 50%;
+    /* equal divide */
   }
   main section.view4 .top {
     order: 1;
@@ -362,10 +425,18 @@ section.view6 .card {
     order: 2;
     display: flex;
     flex-direction: column;
-    justify-content: space-around; /* text ko center align karne ke liye */
+    justify-content: space-around;
+    /* text ko center align karne ke liye */
   }
   main section.view4 .bottom .Para {
     display: flex;
     gap: 1rem;
+  }
+  main section.view6 {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: 100%;
+    padding: 1rem;
   }
 }/*# sourceMappingURL=style.css.map */
