--- a/style.scss
+++ b/style.scss
@@ -380,7 +380,90 @@ main {
       background-size: cover;
     }
   }
+ section.view7 {
+    display: flex;
+    flex-direction: column;
+    color: aliceblue;
+    gap: 1rem;
+    padding: 1rem;
 
+    img {
+      max-width: 100%;
+      /* prevent image overflow */
+      height: auto;
+      display: block;
+      border-radius: 5%;
+    }
+
+    .bottom {
+      padding: 1rem;
+      background-color: #212020;
+      border-radius: 5%;
+
+      #studio {
+        letter-spacing: 0.2rem;
+        color: white;
+        font-weight: 100;
+        font-size: 1rem;
+      }
+    }
+
+
+    p {
+      padding: 1rem;
+      line-height: 2rem;
+      opacity: 0.5;
+      font-weight: 100;
+      font-size: 1rem;
+    }
+
+    h1 {
+      font-weight: 350;
+      font-size: xxx-large;
+      opacity: 0.9;
+    }
+
+    .text {
+      padding: 1rem;
+    }
+
+    #uppercase {
+      text-transform: uppercase;
+    }
+
+    .paragraph {
+      padding: 1rem 0;
+    }
+
+    .flex {
+      display: flex;
+    }
+
+    button {
+      color: #212020;
+      background-color: #212020;
+    }
+
+    #arrow {
+      border: 1px solid rgb(84, 84, 84);
+      margin-right: 0.3rem;
+      border-radius: 50%;
+      display: flex;
+      height: 20px;
+      width: 20px;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+
+    #ourstory {
+      padding-left: 0.3rem;
+      font-weight: 300;
+      font-size: 1rem;
+      letter-spacing: 0.1rem;
+      cursor: pointer;
+    }
+  }
 
 }
 
@@ -504,6 +587,36 @@ main {
       gap: 1rem;
       width: 100%;
       padding: 1rem;
+    }
+      section.view7 {
+      flex-direction: row;
+
+      .top,
+      .bottom {
+        width: 50%;
+      }
+
+      .bottom {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 3rem;
+
+        .text {
+          gap: 1.5rem;
+        }
+
+        h1 {
+          margin-top: -2rem;
+          font-size: 3rem;
+        }
+
+        p {
+          font-size: 1.5rem;
+          margin-bottom: 2rem;
+        }
+      }
     }
   }
 }
