--- a/style.scss
+++ b/style.scss
@@ -402,13 +402,16 @@ main {
       padding: 1rem;
       background-color: #212020;
       border-radius: 5%;
-    p {
-      padding: 1rem;
-      margin-bottom: -1rem;
-      line-height: 2rem;
-      opacity: 0.5;
-      font-weight: 100;
-      font-size: 1rem;
+   
+      #our {
+        padding: 1rem;
+        letter-spacing: 0.2rem;
+        color: white;
+        font-weight: 500;
+        font-size: 1rem;
+        margin: 0 0 -1.2rem 0;
+        opacity: 0.5;
+      }
     }
 
     h1 {
@@ -460,7 +463,7 @@ main {
 
   }
  }
-}
+
 
 //destop view
 @media (min-width: 900px) {
@@ -535,6 +538,7 @@ main {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        padding: 3rem;
 
         /* text ko center align karne ke liye */
         .Para {
@@ -566,7 +570,7 @@ main {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-
+        padding: 3rem;
         /* text ko center align karne ke liye */
         .Para {
           display: flex;
@@ -597,9 +601,18 @@ main {
         justify-content: space-between;
         flex-wrap: wrap;
         padding: 3rem;
-
+     #our {
+        padding: 1rem;
+        letter-spacing: 0.2rem;
+        color: white;
+        font-weight: 500;
+        font-size: 1rem;
+        margin: 0 0 -5rem 0;
+        opacity: 0.5;
+     }
         .text {
           gap: 1.5rem;
+
         }
 
         h1 {
