Make changes in section8

--- a/style.scss
+++ b/style.scss
@@ -462,6 +462,20 @@ main {
 }
 
   }
+  section.view8{
+    padding: 1rem;
+    border-radius: 5%;
+.background{
+  background-color: #cebd63;
+  border-radius: 1rem;
+  .top{
+padding: 1rem;
+  }
+  .bottom{
+padding: 1rem;
+  }
+}
+  }
  }
 
 
